resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root,
	html {
		--color-primary: 243, 238, 229; /* #f3eee5 */
		--color-primary-offset: 249, 250, 251; /* #F9FAFB */
		--color-secondary: 233, 196, 106; /* #e9c46a; */
		--color-secondary-offset: 243, 220, 171; /* #f3dcab; */
		--color-tertiary: 36, 28, 21; /* #241c15 */
		--color-text: 11, 11, 11; /* #0b0b0b; */
		--color-text-muted: 107, 114, 128; /* #6B7280; */
		--color-link: 26, 86, 219; /* #1A56DB */
		--color-success: 14, 159, 110; /* #0E9F6E */
		--color-success-light: 125, 199, 169; /* #7DC7A9 */
		--color-warning: 255, 193, 7; /* #ffc107 */
		--color-warning-light: 249, 216, 117; /* #F9D875 */
		--color-danger: 224, 36, 36; /* #E02424 */
		--color-danger-light: 233, 137, 132; /* #E98984 */
		--color-card: 92, 99, 120; /* #303030 */
		--color-border: 210, 210, 210; /* #D2D2D2; */
	}

	html {
		@apply overflow-y-auto scroll-smooth;
	}

	body {
		@apply bg-skin-primary !font-helvetica text-skin-text;
	}

	/* ===== Custom Scrollbar ===== */
	/* width */
	::-webkit-scrollbar {
		@apply w-4;
	}

	/* Track */
	::-webkit-scrollbar-track {
		@apply bg-skin-transparent;
	}

	/* Handle */
	::-webkit-scrollbar-thumb {
		@apply bg-skin-secondary;
	}

	/* ===== Selection ===== */
	::selection {
		@apply bg-skin-text text-skin-primary;
	}

	/* Remove arrows on input type number */
	input[type="number"]::-webkit-inner-spin-button,
	input[type="number"]::-webkit-outer-spin-button {
		-webkit-appearance: none;
		margin: 0;
	}
}

@layer components {
	.page-container {
		@apply min-h-screen pt-[4.3rem];
	}

	.container {
		@apply mx-auto max-w-[102rem];
	}

	.section-title {
		@apply font-means-web text-4xl font-bold md:text-5xl;
	}

	.button {
		@apply inline-flex cursor-pointer items-center justify-center whitespace-nowrap rounded bg-skin-secondary px-3 py-2 text-skin-text shadow hover:bg-skin-secondary-offset hover:shadow-md;
	}
}

